--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <!-- jQuery and JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-NU/T4JKmgovMiPaK2GP9Y+TVBQxiaiYFJB6igFtfExinKlzVruIK6XtKqxCGXwCG" crossorigin="anonymous"></script>
+<script src="js/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -58,44 +59,63 @@
 	<div id="div1">
 		<div style="width: 350px;height: 100px;margin:  0 auto;">
 			<div class="div1-1-1">
-				<img src="images/首页2.png" alt="" width="100%">
-				<p>套餐</p>
+				<a href="#"><img src="images/首页2.png" alt="" width="100%">
+				<p>套餐</p></a>
 			</div>
 			<div class="div1-1-1">
-				<img src="images/首页3.png" alt="" width="100%">
-				<p>课表</p>
+				<a href="#"><img src="images/首页3.png" alt="" width="100%">
+				<p>课表</p></a>
 			</div>
 			<div class="div1-1-1">
-				<img src="images/首页4.png" alt="" width="100%">
-				<p>VIP</p>
+				<a href="#"><img src="images/首页4.png" alt="" width="100%">
+				<p>VIP</p></a>
 			</div>
 			<div class="div1-1-1">
-				<img src="images/首页5.png" alt="" width="100%">
-				<p>锦囊</p>
+				<a href="#"><img src="images/首页5.png" alt="" width="100%">
+				<p>锦囊</p></a>
 			</div>
 		</div>
 	</div>
-	<div style="width: 100%;height: 55px;display: block;">
+	<div style="width: 100%;height: 45px;display: block;border-bottom: 3px solid #EFEFEF;">
 		<div style="width: 350px;height: 48px;margin: 0 auto;">
 			<div style="width: 5px;height: 18px;background-color: aqua;display: inline-block;margin-top: 15px;">&nbsp;</div>
 			<div style="font-size: 18px;font-weight: 900;display: inline-block;margin-left: 5px;">直播列表</div>
-			<div style="color: rgba(157,157,157,1.00);float: right;"><span>查看全部</span><span>&gt;</span></div>
+			<div style="float: right;margin-top: 15px;font-size: 14px;font-weight: 500;"><a href="#" style="color: rgba(157,157,157,1.00);"><p style="float: left;margin-right: 16px;">查看全部</p><p style="float: right;margin-right: 14px;">&gt;</p></a></div>
 		</div>
 	</div>
+	<div style="width: 100%;height: 220px;">
+		<div class="swiper-container">
+			<div class="swiper-wrapper">
+				<div class="swiper-slide" style="width: 280px;height: 220px;margin-left: 10px;">
+					<p style="margin-top: 5px;">&nbsp;2019/04/19 13:00</p>
+					<a href="#"><img src="images/首页6.png" alt="" width="100%" style="margin-top: 10px;"></a>
+					<p style="color: rgba(107,107,107,1.00);margin-top: 10px;font-size: 14px;">&nbsp;本科生物特训班</p>
+				</div>
+				<div class="swiper-slide" style="width: 280px;height: 220px;margin-left: 10px;">
+					<p style="margin-top: 5px;">&nbsp;2019/04/19 13:00</p>
+					<a href="#"><img src="images/首页6.png" alt="" width="100%" style="margin-top: 10px;"></a>
+					<p style="color: rgba(107,107,107,1.00);margin-top: 10px;font-size: 14px;">&nbsp;本科生物特训班</p>
+				</div>
+				<div class="swiper-slide" style="width: 280px;height: 220px;margin-left: 10px;">
+					<p style="margin-top: 5px;">&nbsp;2019/04/19 13:00</p>
+					<a href="#"><img src="images/首页6.png" alt="" width="100%" style="margin-top: 10px;"></a>
+					<p style="color: rgba(107,107,107,1.00);margin-top: 10px;font-size: 14px;">&nbsp;本科生物特训班</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<nav class="htmlnav">
+		<ul>
+			<li><a href="#"><img src="images/导航12.png" alt=""><p style="color: #7AD5FF">首页</p></a></li>
+			<li><a href="xuexi.html"><img src="images/导航21.png" alt=""><p>学习</p></a></li>
+			<li style="margin-top: 19px;"><a href="faxian.html"><img src="images/导航3.png" alt=""><p>发现</p></a></li>
+			<li><a href="kecheng.html"><img src="images/导航41.png" alt=""><p>课程</p></a></li>
+			<li><a href="wode.html"><img src="images/导航51.png" alt=""><p>我的</p></a></li>
+		</ul>
+	</nav>
 	
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
 	
 <script>
 	$("#mobile-nav-taggle").click(function () {
@@ -111,6 +131,10 @@
 		}, 100)
 		}
 	});
+	var swiper = new Swiper('.swiper-container',{
+			slidesPerView: 1.5,
+			loop : false,
+		});
 </script>
 </body>
 </html>
