--- a/wode.html
+++ b/wode.html
@@ -48,9 +48,57 @@
 			</a>
 		</div>
 	</div>
-	
-	
-	
+	<div style="width: 100%;height: 60px;margin-top: 12px">
+		<div style="width: 60px;height: 60px;background-color: rgba(145,103,205,1.00);border-radius: 50px;margin-left: 13px;float: left;"></div>
+		<div style="height: 60px;margin-left: 8px;float: left;">
+			<div style="color: white;font-size: 18px;">VANCE</div>
+			<div style="width: 60px;height: 26px;text-align: center;background-color: #A4BDFF;color: white;line-height: 26px;border-radius: 5px;margin-top: 8px;">新手家长</div>
+		</div>
+		<div style="float: right;width: 105px;height: 50px;background-color: white;border-radius: 4px 4px 15px 15px;margin-right: 14px;">
+			<img src="images/我的1.png" alt="" style="margin:13px 0 0 23px;">
+			<img src="images/我的2.png" alt="" style="margin:13px 0 0 22px;">
+		</div>
+	</div>
+	<div style="width: 370px;height: 75px;background-image: url(images/我的3.png);background-size: cover;margin: 0 auto;margin-top: 10px;">
+		<div style="width: 33%;height: 75px;color: white;text-align: center;float: left;margin-top: 20px;">
+			<p style="font-size: 14px;">奖学金</p>
+			<p style="font-size: 20px;">1900</p>
+		</div>
+		<div style="width: 33%;height: 75px;color: white;text-align: center;float: left;margin-top: 20px;">
+			<p style="font-size: 14px;">收藏</p>
+			<p style="font-size: 20px;">182</p>
+		</div>
+		<div style="width: 33%;height: 75px;color: white;text-align: center;float: left;margin-top: 20px;">
+			<p style="font-size: 14px;">计划</p>
+			<p style="font-size: 20px;">10</p>
+		</div>
+	</div>
+	<div>
+		<div style="width: 75px;height: 415px;background-color: #393484;border-top-right-radius: 10px;margin-top: 15px;margin-left: 12px;text-align: center;line-height: 75px;float: left;">
+			<div style="width: 75px;height: 80px;border-top-right-radius: 10px;background-color: #393484;">
+				<img src="images/我的5.png" alt="">
+			</div>
+			<div style="width: 75px;height: 95px;text-align: center;color: white;background-color: rgba(82,76,180,1.00);border-top-right-radius: 10px;">
+				<img src="images/我的6.png" alt="">
+				<p style="line-height: 0;">我的钱包</p>
+			</div>
+			<div style="width: 75px;height: 80px;border-top-right-radius: 10px;background-color: #393484;">
+				<img src="images/我的7.png" alt="">
+			</div>
+			<div style="width: 75px;height: 80px;border-top-right-radius: 10px;background-color: #393484;">
+				<img src="images/我的8.png" alt="">
+			</div>
+			<div style="width: 75px;height: 80px;border-top-right-radius: 10px;background-color: #393484;">
+				<img src="images/我的9.png" alt="">
+			</div>
+		</div>
+		<div style="float: left;width: 255px;height: 435px;margin-left: 19px;margin-top: 15px;">
+			<div style="width: 255px;height: 80px;background-image: url(images/我的4.png);background-repeat: no-repeat;">
+				<p style="font-size: 14px;margin-left: 20px;line-height: 50px;">零钱</p>
+				<p style="font-size: 20px;margin-left: 20px;line-height: 0px;">1,900,000,000</p>
+			</div>
+		</div>
+	</div>
 	
 	
 	
