--- a/xuexi.html
+++ b/xuexi.html
@@ -45,9 +45,9 @@
 		 <!--手机导航栏-->
     	<div id="mobile-menu" class="mobile-nav visible-xs visible-sm hide-nav">
 			<ul>
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
+				<li><a href="index.html">首页</a></li>
+				<li><a href="login.html">登录</a></li>
+				<li><a href="xiangqing.html">产品详情</a></li>
 				<li><a href="#">4</a></li>
 			</ul>
     	</div>
