--- a/xuexi.html
+++ b/xuexi.html
@@ -107,21 +107,13 @@
 		<div><img src="images/学习6.png" alt=""> 用户营销：优秀的销售如何留住客户？</div>
 	</div>
 	<div style="font-size: 20px;font-weight: 700;margin-left: 14px;">上新推荐</div>
-	<div style="width: 100%;height: 70px;margin-top: 24px;">
+	<div style="width: 100%;height: 70px;margin-top: 24px;margin-bottom: 80px;">
 		<div style="width: 345px;height: 69px;margin: 0 auto;background-color: white;border-radius: 5px;box-shadow:2px 2px 5px 1px darkgrey;text-align: center;">
 			<div style="height: 69px;width: 40px;float: left;margin-left: 14px;"><div style="width: 40px;height: 40px;background-color: #8A58B0;border-radius: 50px;margin-top: 15px;"></div></div>
 			<div style="float: left;line-height: 69px;font-weight: 900;margin-left: 10px;">千图成长社</div>
 			<p style="color: rgba(155,155,155,1.00);margin-right: 14px;float: right;line-height: 69px;">每周三更新</p>
 		</div>
 	</div>
-	
-	
-	
-	
-	
-	
-	
-	
 	
 	
 	
